# getting-started-with-nlp

./: LICENSE  Makefile  README.md  part_1_spam_classifier.ipynb  part_2_sentiment_analysis.ipynb  part_3_toward_improving_spam_classifier.ipynb  pyproject.toml
slides_and_solution/: part_2_sentiment_analysis_a_solution.ipynb
